--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 include_directories("include")
 link_directories(lib)
 add_subdirectory(Crow)
-add_executable(${PROJECT_NAME} main.cpp url.cpp controller.cpp global_tasker_node.cpp)
+add_executable(${PROJECT_NAME} main.cpp url.cpp controller.cpp global_tasker_node.cpp tasker.cpp)
 #add_library(${PROJECT_NAME} SHARED src/server.cpp src/json.c src/exeception.cpp)
 target_link_libraries(${PROJECT_NAME} -lm -pthread Crow )
